# umbreon_esp_web

./: .gitignore  AUDIT_REPORT.md  CMakeLists.txt  LICENSE  Makefile  README.md  sdkconfig.defaults
.github/workflows/: build.yml
docs/: api-reference.md  architecture.md  building.md  configuration.md  hardware.md  protocols.md  testing.md  web-ui.md
docs/archive/: AUDIT_REPORT.md
include/: app_config.h  led_logic.h  shared_state.h  web_ui.h  wifi_config_example.h
main/: CMakeLists.txt  http_server.c  http_server.h  led_task.c  led_task.h  main.c  tcp_server.c  tcp_server.h  uart_driver.c  uart_driver.h  web_ui.cpp  wifi_manager.c  wifi_manager.h  ws_handshake.c  ws_handshake.h  ws_server.c  ws_server.h
test/: CMakeLists.txt  run_all_tests.c  test_base64.c  test_header_parser.c  test_led_logic.c  test_ws_frame.c
test/mocks/: mock_esp_log.h  mock_freertos.h
